# pkg/providers/cohere/schemas.go
@@ -15,10 +15,10 @@ type ChatCompletion struct {
 }
 
 type TokenCount struct {
-	PromptTokens   float64 `json:"prompt_tokens"`
-	ResponseTokens float64 `json:"response_tokens"`
-	TotalTokens    float64 `json:"total_tokens"`
-	BilledTokens   float64 `json:"billed_tokens"`
+	PromptTokens   int `json:"prompt_tokens"`
+	ResponseTokens int `json:"response_tokens"`
+	TotalTokens    int `json:"total_tokens"`
+	BilledTokens   int `json:"billed_tokens"`
 }
 
 type Meta struct {
@@ -60,6 +60,57 @@ type SearchQueryObject struct {
 }
 
 type ConnectorsResponse struct {
+	ID              string            `json:"id"`
+	UserAccessToken string            `json:"user_access_token"`
+	ContOnFail      string            `json:"continue_on_failure"`
+	Options         map[string]string `json:"options"`
+}
+
+// ChatCompletionChunk represents SSEvent a chat response is broken down on chat streaming
+// Ref: https://docs.cohere.com/reference/about
+type ChatCompletionChunk struct {
+	IsFinished bool          `json:"is_finished"`
+	EventType  string        `json:"event_type"`
+	Text       string        `json:"text"`
+	Response   FinalResponse `json:"response,omitempty"`
+}
+
+type FinalResponse struct {
+	ResponseID   string     `json:"response_id"`
+	Text         string     `json:"text"`
+	GenerationID string     `json:"generation_id"`
+	TokenCount   TokenCount `json:"token_count"`
+	Meta         Meta       `json:"meta"`
+	FinishReason string     `json:"finish_reason"`
+}
+
+type ChatMessage struct {
+	Role    string `json:"role"`
+	Content string `json:"content"`
+}
+
+type ChatHistory struct {
+	Role    string `json:"role"`
+	Message string `json:"message"`
+	User    string `json:"user,omitempty"`
+}
+
+// ChatRequest is a request to complete a chat completion..
+type ChatRequest struct {
+	Model             string        `json:"model"`
+	Message           string        `json:"message"`
+	Temperature       float64       `json:"temperature,omitempty"`
+	PreambleOverride  string        `json:"preamble_override,omitempty"`
+	ChatHistory       []ChatHistory `json:"chat_history,omitempty"`
+	ConversationID    string        `json:"conversation_id,omitempty"`
+	PromptTruncation  string        `json:"prompt_truncation,omitempty"`
+	Connectors        []string      `json:"connectors,omitempty"`
+	SearchQueriesOnly bool          `json:"search_queries_only,omitempty"`
+	CitiationQuality  string        `json:"citiation_quality,omitempty"`
+	Stream            bool          `json:"stream,omitempty"`
+}
+
+type Connectors struct {
 	ID              string            `json:"id"`
 	UserAccessToken string            `json:"user_access_token"`
 	ContOnFail      string            `json:"continue_on_failure"`
