# pkg/routers/router.go
@@ -20,32 +20,36 @@ var (
 )
 
 type LangRouter struct {
-	routerID  string
-	Config    *LangRouterConfig
-	routing   routing.LangModelRouting
-	retry     *retry.ExpRetry
-	models    []providers.LanguageModel
-	telemetry *telemetry.Telemetry
+	routerID          string
+	Config            *LangRouterConfig
+	chatModels        []*providers.LanguageModel
+	chatStreamModels  []*providers.LanguageModel
+	chatRouting       routing.LangModelRouting
+	chatStreamRouting routing.LangModelRouting
+	retry             *retry.ExpRetry
+	tel               *telemetry.Telemetry
 }
 
 func NewLangRouter(cfg *LangRouterConfig, tel *telemetry.Telemetry) (*LangRouter, error) {
-	models, err := cfg.BuildModels(tel)
+	chatModels, chatStreamModels, err := cfg.BuildModels(tel)
 	if err != nil {
 		return nil, err
 	}
 
-	strategy, err := cfg.BuildRouting(models)
+	chatRouting, chatStreamRouting, err := cfg.BuildRouting(chatModels, chatStreamModels)
 	if err != nil {
 		return nil, err
 	}
 
 	router := &LangRouter{
-		routerID:  cfg.ID,
-		Config:    cfg,
-		models:    models,
-		retry:     cfg.BuildRetry(),
-		routing:   strategy,
-		telemetry: tel,
+		routerID:          cfg.ID,
+		Config:            cfg,
+		chatModels:        chatModels,
+		chatStreamModels:  chatStreamModels,
+		retry:             cfg.BuildRetry(),
+		chatRouting:       chatRouting,
+		chatStreamRouting: chatStreamRouting,
+		tel:               tel,
 	}
 
 	return router, err
@@ -55,15 +59,15 @@ func (r *LangRouter) ID() string {
 	return r.routerID
 }
 
-func (r *LangRouter) Chat(ctx context.Context, request *schemas.ChatRequest) (*schemas.ChatResponse, error) {
-	if len(r.models) == 0 {
+func (r *LangRouter) Chat(ctx context.Context, req *schemas.ChatRequest) (*schemas.ChatResponse, error) {
+	if len(r.chatModels) == 0 {
 		return nil, ErrNoModels
 	}
 
 	retryIterator := r.retry.Iterator()
 
 	for retryIterator.HasNext() {
-		modelIterator := r.routing.Iterator()
+		modelIterator := r.chatRouting.Iterator()
 
 		for {
 			model, err := modelIterator.Next()
@@ -73,20 +77,20 @@ func (r *LangRouter) Chat(ctx context.Context, request *schemas.ChatRequest) (*s
 				break
 			}
 
-			langModel := model.(providers.LanguageModel)
+			langModel := model.(providers.LangModel)
 
 			// Check if there is an override in the request
-			if request.Override != (schemas.OverrideChatRequest{}) {
+			if req.Override != nil {
 				// Override the message if the language model ID matches the override model ID
-				if langModel.ID() == request.Override.Model {
-					request.Message = request.Override.Message
+				if langModel.ID() == req.Override.Model {
+					req.Message = req.Override.Message
 				}
 			}
 
-			resp, err := langModel.Chat(ctx, request)
+			resp, err := langModel.Chat(ctx, req)
 			if err != nil {
-				r.telemetry.Logger.Warn(
-					"lang model failed processing chat request",
+				r.tel.L().Warn(
+					"Lang model failed processing chat request",
 					zap.String("routerID", r.ID()),
 					zap.String("modelID", langModel.ID()),
 					zap.String("provider", langModel.Provider()),
@@ -103,7 +107,7 @@ func (r *LangRouter) Chat(ctx context.Context, request *schemas.ChatRequest) (*s
 
 		// no providers were available to handle the request,
 		//  so we have to wait a bit with a hope there is some available next time
-		r.telemetry.Logger.Warn("no healthy model found, wait and retry", zap.String("routerID", r.ID()))
+		r.tel.L().Warn("No healthy model found to serve chat request, wait and retry", zap.String("routerID", r.ID()))
 
 		err := retryIterator.WaitNext(ctx)
 		if err != nil {
@@ -113,7 +117,116 @@ func (r *LangRouter) Chat(ctx context.Context, request *schemas.ChatRequest) (*s
 	}
 
 	// if we reach this part, then we are in trouble
-	r.telemetry.Logger.Error("no model was available to handle request", zap.String("routerID", r.ID()))
+	r.tel.L().Error("No model was available to handle chat request", zap.String("routerID", r.ID()))
 
 	return nil, ErrNoModelAvailable
+}
+
+func (r *LangRouter) ChatStream(
+	ctx context.Context,
+	req *schemas.ChatStreamRequest,
+	respC chan<- *schemas.ChatStreamResult,
+) {
+	if len(r.chatStreamModels) == 0 {
+		respC <- schemas.NewChatStreamErrorResult(&schemas.ChatStreamError{
+			ID:       req.ID,
+			ErrCode:  "noModels",
+			Message:  ErrNoModels.Error(),
+			Metadata: req.Metadata,
+		})
+
+		return
+	}
+
+	retryIterator := r.retry.Iterator()
+
+	for retryIterator.HasNext() {
+		modelIterator := r.chatStreamRouting.Iterator()
+
+	NextModel:
+		for {
+			model, err := modelIterator.Next()
+
+			if errors.Is(err, routing.ErrNoHealthyModels) {
+				// no healthy model in the pool. Let's retry after some time
+				break
+			}
+
+			langModel := model.(providers.LangModel)
+			modelRespC, err := langModel.ChatStream(ctx, req)
+			if err != nil {
+				r.tel.L().Error(
+					"Lang model failed to create streaming chat request",
+					zap.String("routerID", r.ID()),
+					zap.String("modelID", langModel.ID()),
+					zap.String("provider", langModel.Provider()),
+					zap.Error(err),
+				)
+
+				continue
+			}
+
+			for chunkResult := range modelRespC {
+				err = chunkResult.Error()
+				if err != nil {
+					r.tel.L().Warn(
+						"Lang model failed processing streaming chat request",
+						zap.String("routerID", r.ID()),
+						zap.String("modelID", langModel.ID()),
+						zap.String("provider", langModel.Provider()),
+						zap.Error(err),
+					)
+
+					// It's challenging to hide an error in case of streaming chat as consumer apps
+					//  may have already used all chunks we streamed this far (e.g. showed them to their users like OpenAI UI does),
+					//  so we cannot easily restart that process from scratch
+					respC <- schemas.NewChatStreamErrorResult(&schemas.ChatStreamError{
+						ID:       req.ID,
+						ErrCode:  "modelUnavailable",
+						Message:  err.Error(),
+						Metadata: req.Metadata,
+					})
+
+					continue NextModel
+				}
+
+				respC <- schemas.NewChatStreamResult(chunkResult.Chunk())
+			}
+
+			return
+		}
+
+		// no providers were available to handle the request,
+		//  so we have to wait a bit with a hope there is some available next time
+		r.tel.L().Warn(
+			"No healthy model found to serve streaming chat request, wait and retry",
+			zap.String("routerID", r.ID()),
+		)
+
+		err := retryIterator.WaitNext(ctx)
+		if err != nil {
+			// something has cancelled the context
+			respC <- schemas.NewChatStreamErrorResult(&schemas.ChatStreamError{
+				ID:       req.ID,
+				ErrCode:  "other",
+				Message:  err.Error(),
+				Metadata: req.Metadata,
+			})
+
+			return
+		}
+	}
+
+	// if we reach this part, then we are in trouble
+	r.tel.L().Error(
+		"No model was available to handle streaming chat request. Try to configure more fallback models to avoid this",
+		zap.String("routerID", r.ID()),
+	)
+
+	respC <- schemas.NewChatStreamErrorResult(&schemas.ChatStreamError{
+		ID:       req.ID,
+		ErrCode:  "allModelsUnavailable",
+		Message:  ErrNoModelAvailable.Error(),
+		Metadata: req.Metadata,
+	})
 }
